Add implementaitno for walshadow
